# touch-grass-mcp

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONFIG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml  pip-audit.yml
src/touch_grass/: __init__.py  cli.py  config.py  ingest.py  packs.py  server.py  setup_wizard.py
src/touch_grass/clients/: __init__.py
src/touch_grass/clients/core/: __init__.py  dice.py  editorial.py  eventbrite.py  meetup.py  nws_weather.py  openbrewery.py  resident_advisor.py  ticketmaster.py  todaytix.py  yelp.py
src/touch_grass/clients/nyc/: __init__.py  bpl.py  chelsea_galleries.py  gcal_public.py  nyc_audubon.py  nyc_opendata.py  nypl.py  qpl.py  the_skint.py
src/touch_grass/clients/nyc/museums/: carnegie_hall.py  frick.py  met_talks.py  moma_talks.py  momaps1.py  museums.py  ninety_second_y.py  park_avenue_armory.py  whitney_talks.py
src/touch_grass/clients/nyc/venues/: brooklyn_steel.py  lincoln_center.py  metrograph.py  village_jazz.py  village_vanguard.py
src/touch_grass/pulse/: __init__.py  reader.py  tracker.py
src/touch_grass/taste/: __init__.py  profile.py  ranking.py
tests/: test_pulse_reader.py  test_pulse_tracker.py  test_setup_wizard.py
